# django-postgres-task-queue

./: README.md  pyproject.toml
tasks/: managers.py  models.py
tasks/management/commands/: task_executor.py
tasks/migrations/: 0001_initial.py  0002_default_queue.py
