[tool.poetry]
name = "django-postgres-task-queue"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6,^3.7"
croniter = "^0.3.30"
pytz = "^2019.1"

[tool.poetry.dev-dependencies]
ipython = "^7.5"
django = "^2.2"
isort = "^4.3"
pylint = "^2.3"
pyflakes = "^2.1"
black = "=19.3b0"
pylint-django = "^2.0"
pytest = "^4.5"
psycopg2 = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
